--- a/Entrega1/teorica_jupiter/modelos_primeira_ordem.ipynb
+++ b/Entrega1/teorica_jupiter/modelos_primeira_ordem.ipynb
@@ -170,6 +170,7 @@
     "y = dados[:,2]  # saída\n",
     "mt = 0\n",
     "i = 0\n",
+    "# teste=1\n",
     "\n",
     "# Calculo da media dos ultimos valores (em regime permanente)\n",
     "while i<=50:\n",
