--- a/Guiao2/Guiao2.ipynb
+++ b/Guiao2/Guiao2.ipynb
@@ -1065,6 +1065,13 @@
     "plt.legend(loc='best')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comentário Junção"
+   ]
   }
  ],
  "metadata": {
