--- a/1190396_1191116_Guião2/1190396_1191116.ipynb
+++ b/1190396_1191116_Guião2/1190396_1191116.ipynb
@@ -192,8 +192,7 @@
    "metadata": {},
    "source": [
     "    Acima estão representados os gráficos relativos à simulação do sistema em malha fechada com o controlador P. Fizeram-se quatro experiencias para valores do ganho proporcional diferentes (1,5,10,20) de modo a observar as curvas de resposta em temperatura, os correspondentes sinais de controlo (u, em Duty Cycle) e a variação do erro ao longo do tempo.\n",
-    "\n",
-    "Observa-se que o aumento do ganho proporcional leva a um aumento da amplitude do sinal de controlo, o que é expectável. No entanto, o aumento do ganho proporcional leva também a um aumento do erro em regime permanente, o que é indesejável. Assim, o ganho proporcional deve ser escolhido de modo a minimizar o erro em regime permanente, mas sem aumentar demasiado a amplitude do sinal de controlo.\n"
+    "\n"
    ]
   },
   {
@@ -885,6 +884,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "        Como Kp varia enquanto Ti é constante, quão maior este é, maior torna-se o overshoot, podendo-se verificar isto quer na simulação quer na sistema SERT. No entanto, é importante notar-se que no sistema SERT, quando tau_c é maior, o que torna Kp superior, a temperatura tem uma oscilação mais acentuada que a da simulação."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Controlador PI com  esquema anti-windup"
    ]
   },
@@ -1115,6 +1121,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "        Ao contrário dos outros dois modos, Ziegler-Nichols e IMC, no anti-windup, é alterada a equação do integrador. Nesta, através de uma variável Ka e com valor do controlo antes e depois da saturação, calcula-se uma nova parcela da equação do I, assim, quando o Ka é superior, quando a temperatura aproxima-se da temperatura de referência, a temperatura é \"forçada\" a ter um overshoot menor, ou até inexistente. Este efeito pode ser visível quer na simulação quer no sistema SERT. No entanto, é mais visível o seu efeito quando se compara com o método de Ziegler-Nichols."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Junção dos gráfico de variação de temperatura de Ziegler-Nichols com anti-windup"
    ]
   },
@@ -1180,7 +1193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Nota-se uma variação evidente no sistema quando se utiliza o anti-windup quer no sistema SERT, quer na simulação. Pode-se reparar que quanto maior é o Ka, menor é a oscilação do sinal na chegada à referencia."
+    "    Como referido no ponto anterior, nota-se uma variação evidente no sistema quando se utiliza o anti-windup quer no sistema SERT, quer na simulação. Tendo uma diferença mais notória no sistema SERT, onde o overshoot tem uma díminuição acentuada mesmo para um Ka de 0.02. "
    ]
   }
  ],
